{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerActionMap",
            "id": "83bb1c41-bb15-4bcd-a8e9-1c4cfc60090d",
            "actions": [
                {
                    "name": "ClickAction",
                    "type": "Button",
                    "id": "df0b7469-8582-4696-8c22-ad8195e2156c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "293b6149-9036-4c14-9307-98dc3df20bd2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cbfda1c4-d0cd-4f5d-8ef7-eed735dab02e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ClickAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1aec8424-f89a-4c45-87ba-03bc2dd56f0c",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}